--- a/themes/material/css/title.css
+++ b/themes/material/css/title.css
@@ -55,6 +55,11 @@ label, span.info { /* Caption */
     font-size: 1.5rem;
     color: rgba(0, 0, 0, 0.54);
 }
+
+span.info i+i {
+    margin-left: 0.5rem;
+}
+
 label, span.info b { /* Caption */
     font-weight: 600;
 }
